--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,23 @@ body{
   text-align: right;
   color: #7A8E87;
 }
+
+#LinkSelectList{
+  outline: none;
+  width: 100%;
+  font-size: 12.5px;
+  overflow: auto;
+  border: 1px solid #c0c0c0;
+  margin-top: 5px;
+  height:200px;
+}
+#linksInput{
+  outline:none;
+  width: 180px;
+  border-radius: 3px;
+  border: 1px solid #c0c0c0;
+  font-size: 13px;
+  padding-left: 3px;
+  padding-right: 3px;
+  margin-right: 5px;
+}
